// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText empty matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-backgroundColor-14lw9ot r-borderBottomColor-1ny7kx0 r-borderBottomWidth-qklmqi r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-1it3c9n r-paddingHorizontal-1dye5f7 r-paddingVertical-oyd9sg r-placeholderTextColor-1xktb6b r-textAlign-q4m81j"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        onTouchStart={[Function]}
        readOnly={false}
        spellCheck={true}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`InputText matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-backgroundColor-14lw9ot r-borderBottomColor-1ny7kx0 r-borderBottomWidth-qklmqi r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-1it3c9n r-paddingHorizontal-1dye5f7 r-paddingVertical-oyd9sg r-placeholderTextColor-1xktb6b r-textAlign-q4m81j"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        onTouchStart={[Function]}
        readOnly={false}
        spellCheck={true}
        type="text"
        value="Text"
      />
    </div>
  </div>
</div>
`;
